# lecture-vlms

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: curriculum.json  getting-started.md  roadmap.md
lectures/01_CLIP/: README.md
lectures/01_Flamingo/: README.md
lectures/01_LLaVA/: README.md
lectures/01_LLaVA/practice/: Dockerfile  README.md
lectures/02_BLIP-2/: README.md
lectures/02_LLaVA-1.5/practice/: README.md  pyproject.toml
lectures/02_SigLIP/: README.md
lectures/03_Flamingo/: README.md
lectures/03_InstructBLIP/: README.md
lectures/03_Qwen-VL/practice/: README.md  demo.py
lectures/04_BLIP-2/: README.md
lectures/04_MiniGPT-4/: README.md
lectures/04_Qwen2-VL/practice/: README.md
lectures/05_LLaVA/: README.md
lectures/05_LLaVA/practice/: README.md
lectures/05_Qwen2.5-VL/: README.md
lectures/05_Qwen2.5-VL/practice/: README.md  demo.py
lectures/06_LLaVA-1.5/: README.md
lectures/06_LLaVA-1.5/practice/: Dockerfile  README.md  demo.py
lectures/06_MiniGPT-4/: README.md
lectures/07_LLaVA-OneVision/: README.md
lectures/07_LLaVA/practice/: README.md  demo.py  pyproject.toml
lectures/08_LLaVA-1.5/: README.md
lectures/08_LLaVA-1.5/practice/: README.md
lectures/08_Qwen-VL/: README.md
lectures/08_Qwen-VL/practice/: Dockerfile  README.md  demo.py  pyproject.toml
lectures/09_LLaVA-OneVision/: README.md
lectures/09_Qwen2-VL/: README.md
lectures/09_Qwen2-VL/practice/: Dockerfile  README.md  demo.py
lectures/10_Qwen-VL/: README.md
lectures/10_Qwen2.5-VL/: README.md
lectures/10_Qwen2.5-VL/practice/: README.md  pyproject.toml
lectures/11_Qwen2-VL/: README.md
lectures/11_Qwen2-VL/practice/: README.md  pyproject.toml
lectures/11_Qwen3-VL/: README.md
lectures/12_InternVL/: README.md
lectures/12_Qwen2.5-VL/: README.md
lectures/13_InternVL3/: README.md
lectures/14_InternVL/: README.md
lectures/15_InternVL3/: README.md
lectures/16_DeepSeek-VL/: README.md
lectures/17_DeepSeek-VL2/: README.md
lectures/18_Janus/: README.md
lectures/19_Janus-Pro/: README.md
lectures/20_PaLI/: README.md
lectures/21_PaliGemma/: README.md
lectures/22_PaliGemma-2/: README.md
lectures/23_Gemma-3/: README.md
lectures/24_Chameleon/: README.md
lectures/25_CogVLM/: README.md
lectures/26_Emu3/: README.md
lectures/27_Reasoning-Transfer/: README.md
lectures/28_Edge-Efficient-MLLM/: README.md
tools/: build_site.py
(+5 files in other folders)
